# goose-extension-reachy-mini

./: .gitignore  README.ko.md  README.md  config.control-app.example.yaml  config.example.yaml  pyproject.toml
examples/: prompts.md
src/goose_reachy_mini/: __init__.py  audio.py  control_app_client.py  mock_reachy.py  reachy_client.py  recorded_moves.py  safety.py  schemas.py  server.py  tools.py  vision.py
tests/: test_control_app_client.py  test_mcp_server.py  test_reachy_client.py  test_tools.py  test_vision.py
