[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "goose-reachy-mini"
version = "0.1.0"
description = "goose MCP stdio extension for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Agentic AI Foundation" }]
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
hardware = ["reachy2-sdk>=1.0.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
dev = ["ruff>=0.5.0", "mypy>=1.8.0"]

[project.scripts]
goose-reachy-mini = "goose_reachy_mini.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goose_reachy_mini"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
